--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             <ul class="feedback-list">
                 <li class="feedback-item thumb">
                     <div class="review-header">
-                            <img class="user" src="https://i.etsystatic.com/iusa/18dac2/20713972/iusa_75x75.20713972_bl0p.jpg" alt="">
+                            <img class="user" src="https://i.etsystatic.com/iusa/2c42a1/40607517/iusa_75x75.40607517_k2a6.jpg" alt="">
                             <div class="review-info">
-                                <a class="user-name" href="https://www.etsy.com/people/margomadison">margomadison</a>
-                                <p class="date-review">29 Nov 2020</p>
+                                <a class="user-name" href="https://www.etsy.com/people/carmenog">Carmen</a>
+                                <p class="date-review">10 Dec 2020</p>
                                 <div class="rate">
                                     <svg class="rate-icon" width="18px" height="18px">
                                         <use href="./images/sprite.svg#icon-star"></use>
@@ -97,10 +97,10 @@
                                 </div>
                             </div>
                     </div>
-                    <p class="review-text">Amazing packaging and great communication. The bowls are super pretty. They look great which makes me happy. thanks so much.</p>
+                    <p class="review-text">These bowls are beautiful! The customer service was amazing and they were shipped with such care. I was concerned about ceramic bowls breaking during shipment across the ocean, but there’s no way anything could’ve happened to them with how well they were packed. They arrived quickly and we are very happy with them.</p>
                     <a class="product-link">
-                        <img class="img-product" src="./images/products/pink-outside-beige.jpg" width="100px">
-                        <p class="product-name">Ceramic Pet Bowl Pink Outside/Beige</p>
+                        <img class="img-product" src="./images/products/deep-blue-beige.jpg" width="90px">
+                        <p class="product-name">Ceramic Pet Bowl Deep Blue/Beige</p>
                     </a>
                 </li>
                 <li class="feedback-item thumb">
@@ -130,16 +130,16 @@
                     </div>
                     <p class="review-text">Amazing packaging and great communication. The bowls are super pretty. They look great which makes me happy. thanks so much.</p>
                     <a class="product-link">
-                        <img class="img-product" src="./images/products/pink-outside-beige.jpg" width="100px">
+                        <img class="img-product" src="./images/products/pink-outside-beige.jpg" width="90px">
                         <p class="product-name">Ceramic Pet Bowl Pink Outside/Beige</p>
                     </a>
                 </li>
                 <li class="feedback-item thumb">
                     <div class="review-header">
-                            <img class="user" src="https://i.etsystatic.com/iusa/18dac2/20713972/iusa_75x75.20713972_bl0p.jpg" alt="">
+                            <img class="user" src="https://www.etsy.com/images/avatars/default_avatar_75x75.png" alt="">
                             <div class="review-info">
-                                <a class="user-name" href="https://www.etsy.com/people/margomadison">margomadison</a>
-                                <p class="date-review">29 Nov 2020</p>
+                                <a class="user-name" href="https://www.etsy.com/people/Lo8815">Laura</a>
+                                <p class="date-review">8 Nov 2020</p>
                                 <div class="rate">
                                     <svg class="rate-icon" width="18px" height="18px">
                                         <use href="./images/sprite.svg#icon-star"></use>
@@ -159,17 +159,112 @@
                                 </div>
                             </div>
                     </div>
-                    <p class="review-text">Amazing packaging and great communication. The bowls are super pretty. They look great which makes me happy. thanks so much.</p>
+                    <p class="review-text">These bowls are beautiful and exactly as pictured. It took about 2 weeks between placing my order and delivery to the US, which I was pretty impressed with given the distance. The bowls were very safely packaged and communication with the business was great. Thank you!.</p>
                     <a class="product-link">
-                        <img class="img-product" src="./images/products/pink-outside-beige.jpg" width="100px">
+                        <img class="img-product" src="./images/products/pink-outside-beige.jpg" width="90px">
                         <p class="product-name">Ceramic Pet Bowl Pink Outside/Beige</p>
+                    </a>
+                </li>
+                <li class="feedback-item thumb">
+                    <div class="review-header">
+                            <img class="user" src="https://i.etsystatic.com/iusa/61552b/62275271/iusa_75x75.62275271_q27g.jpg" alt="">
+                            <div class="review-info">
+                                <a class="user-name" href="https://www.etsy.com/people/orchardwillow">Paula</a>
+                                <p class="date-review">06 Nov 2020</p>
+                                <div class="rate">
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                </div>
+                            </div>
+                    </div>
+                    <p class="review-text">I bought a couple of these bowls for our cats and love them. Very well made and look beautiful.</p>
+                    <a class="product-link">
+                        <img class="img-product" src="./images/products/pink-beige.jpg" width="90px">
+                        <p class="product-name">Ceramic Pet Bowl Pink/Beige</p>
+                    </a>
+                </li>
+                <li class="feedback-item thumb">
+                    <div class="review-header">
+                            <img class="user" src="https://i.etsystatic.com/iusa/70dcf6/22905817/iusa_75x75.22905817_ss0c.jpg" alt="">
+                            <div class="review-info">
+                                <a class="user-name" href="https://www.etsy.com/people/fmushi">Fiona</a>
+                                <p class="date-review">24 Oct 2020</p>
+                                <div class="rate">
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                    <svg class="rate-icon" width="18px" height="18px">
+                                        <use href="./images/sprite.svg#icon-star"></use>
+                                    </svg>
+                                </div>
+                            </div>
+                    </div>
+                    <p class="review-text">Absolutely gorgeous bowls! My puppy loves them and they look beautiful in my kitchen. The customer service was above and beyond, I made a mistake with my delivery address and she went out of the way to fix this for me free of any charge! Just amazing 💕</p>
+                    <a class="product-link">
+                        <img class="img-product" src="./images/products/deep-blue-beige.jpg" width="90px">
+                        <p class="product-name">Ceramic Pet Bowl Deep Blue/Beige</p>
                     </a>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="container">
+        <a class="footer__link-logo" href="">
+            <svg class="footer__logo" width="40px" height="40px">
+                <use href="./images/sprite.svg#icon-logo"></use>
+            </svg>
+            <p class="company-name">Dogni</p>
+        </a>
+        <form>
+            <label class="form-label"> if you still have questions, please ask them here
+                    <textarea class="form-field" name="questions"></textarea>
+                    <button class="btn" type="submit">Send</button>
+            </label>
 
+        </form>
+        <div class="footer-social">
+            <p class="join">Follow Us</p>
+            <ul class="footer-social__list">
+                <li class="footer-social__item">
+                    <a class="footer-social__link" href="https://www.instagram.com/" rel="noreferrer noopener" target="_blank">
+                        <svg class="social-logo" width="20px" height="20px" aria-label="instagram">
+                            <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social__item">
+                    <a class="footer-social__link" href="https://www.facebook.com" rel="noreferrer noopener" target="_blank">
+                        <svg class="social-logo" width="20px" height="20px" aria-label="facebook">
+                            <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
     </footer>
 </body>
 </html>
